# SPECTPSFToolbox

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
docs/source/: conf.py  index.rst  tutorials.rst
docs/source/_static/css/: custom.css
docs/source/tutorials/: 1_kernel1d_intro.ipynb  2_kernel2d_intro.ipynb  3_operators.ipynb  4_optimization_intro.ipynb  5_optimization_ac225.ipynb  6_nearestkernel_ac225.ipynb  7_pytomography_ac225recon.ipynb  8_pytomography_lu177_le_recon.ipynb  9_lu177_me_modeling_and_recon.ipynb  tutorials.rst
docs/source/tutorials/sample_simind_script/: simind128_shift.smc
paper/: paper.bib  paper.md
paper/jats/: paper.jats
src/spectpsftoolbox/: kernel1d.py  kernel2d.py  operator2d.py  simind_io.py  utils.py
tests/: test_functionality.py
tutorials/: 1_kernel1d_intro.ipynb  2_kernel2d_intro.ipynb  3_operators.ipynb  4_optimization_intro.ipynb  5_optimization_ac225.ipynb  6_nearestkernel_ac225.ipynb  7_pytomography_ac225recon.ipynb  8_pytomography_lu177_le_recon.ipynb  9_lu177_me_modeling_and_recon.ipynb  paper_plots.ipynb
tutorials/sample_simind_script/: positions.txt  run_multi_lu177.sh
